<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:icon="@drawable/ic_help"
        android:title="@string/pref_header_help" />
    <header
        android:fragment="eventail.eventail.activity.AboutActivity$StatusPreferenceFragment"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/pref_header_status">
    </header>
    <header
        android:icon="@drawable/ic_insert_comment"
        android:title="@string/pref_header_opinion" />
    <header
        android:icon="@drawable/ic_person_add"
        android:title="@string/pref_header_invite" />
    <header
        android:icon="@drawable/ic_description"
        android:title="@string/pref_header_terms">
        <intent android:action="eventail.activity.WebBrowserActivity">
            <extra android:name="url" android:value="@string/terms_path" />
            <extra android:name="title" android:value="@string/pref_header_terms" />
        </intent>
    </header>
    <header
        android:icon="@drawable/ic_action_lock_closed"
        android:title="@string/pref_header_privacy_policy">
        <intent android:action="eventail.activity.WebBrowserActivity">
            <extra android:name="url" android:value="@string/privacy_policy_path" />
            <extra android:name="title" android:value="@string/pref_header_privacy_policy" />
        </intent>
    </header>
    <header
        android:icon="@drawable/ic_action_like"
        android:title="@string/pref_header_team">
        <intent android:action="eventail.activity.TeamActivity" />
    </header>
    <header
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_about_eventail">
        <intent android:action="eventail.activity.AboutEventailActivity" />
    </header>

</preference-headers>
