<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_eventail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="50dp"
    android:gravity="center"
    tools:context="eventail.eventail.activity.AboutEventailActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:id="@+id/appName" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appName"
        android:id="@+id/version"
        android:layout_marginBottom="20dp">
        <TextView
            android:text="@string/version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:text="@string/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height = "wrap_content"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        app:srcCompat="@mipmap/ic_map"
        android:scaleType="fitCenter"
        android:layout_below="@+id/version" />
</RelativeLayout>
